--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,12 @@
     <title></title>
 </head>
 <body>
+<header>
+    <ul>
+        <li><a href="index.html">index</a</li>
+        <li><a href="about.html">about</a</li>
+    </ul>
+</header>
 {{ content }}
 </body>
 </html>
