--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/site.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{{site.baseurl}}/js/lib/jquery.hoverflow.min.js"></script>
 </head>
 <body>
 <header>
@@ -20,6 +23,6 @@
 <footer>
 
 </footer>
-
+<script src="{{site.baseurl}}/js/animation.js"></script>
 </body>
 </html>
