--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -2,6 +2,9 @@
 body {
   padding: 75px 0 0;
 }
+body * {
+  text-align: left;
+}
 ul {
   list-style: none;
   padding: 0;
@@ -13,51 +16,135 @@ a {
   cursor: pointer;
   display: inline-block;
 }
+img {
+  max-width: 100%;
+}
+.row {
+  @include row;
+}
 //navigation
 header {
   border-bottom: 1px solid #ccc;
   position: fixed;
   width: 100%;
   top: 0;
-  h1 {
-    font-size: 14px;
-    line-height: 36px;
-  }
-  .header {
-    height: 36px;
-    padding: 20px 0 0;
-    .logo {
-      float: left;
-      height: 36px;
-      margin: 0 38px 0 0;
-      width: 102px;
-    }
-    nav {
-      li {
-        float: left;
-        a {
-          padding: 0 20px;
-          display: inline-block;
-          line-height: 36px;
-          font-size: 14px;
-          text-transform: uppercase;
-          color: #545454;
-        }
-        a:hover {
-          text-decoration: underline;
-          color:  #a2a8a8;
-        }
-        a.current {
-          border-bottom: solid 4px #2098d1;
-        }
-      }
-    }
-  }
-
+  z-index: 1;
+  background-color: white;
+}
+header  h1 {
+  font-size: 14px;
+  line-height: 36px;
+}
+header .header {
+  height: 36px;
+  padding: 20px 0 0;
+}
+header .header .logo {
+  float: left;
+  height: 36px;
+  margin: 0 38px 0 0;
+  width: 102px;
+}
+header .header nav li {
+  float: left;
+}
+header .header nav li a {
+  padding: 0 20px;
+  display: inline-block;
+  line-height: 36px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #545454;
+}
+header .header nav li a:hover {
+  text-decoration: underline;
+  color:  #a2a8a8;
+}
+header .header nav li a.current {
+  border-bottom: solid 4px #2098d1;
 }
 nav {
 
 }
 .nav-top {
+
+}
+/*portfolio*/
+.portfolio {
+  margin-bottom: 1em;
+}
+.portfolio li {
+  width: columns(2); // declare width in columns
+  float: left;
+  margin: 0 2% 1.5em 0;
+  background: #FFF;
+  padding: 8px 8px;
+  position: relative;
+  display: block;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+  @include border-box;
+}
+.portfolio li:nth-child(3n) {
+  @include last; // remove margin-right from last element in container
+}
+.portfolio li a {
+  display: block;
+  position: relative;
+  color: #555555;
+}
+.portfolio li a img {
+  display: block;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  margin: 0;
+}
+.portfolio li:hover {
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
+}
+.portfolio .description {
+  display: block;
+  margin: 0;
+  font-size: 16px;
+  color: #888888;
+  line-height: 1.2em;
+  padding-top: 0.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
+}
+.portfolio h4 {
+  font-weight: normal;
+  font-size: 16px;
+  text-align: left;
+}
+.portfolio p {
+  display: block;
+}
+.portfolio .arrow-r {
+  width: 32px;
+  height: 32px;
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 5px;
+  opacity: 0;
+  font-size: 30px;
+}
+.portfolio {
 
 }
