--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/css/site.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{{site.baseurl}}/js/lib/jquery.hoverflow.min.js"></script>
+    <script src="{{site.baseurl}}/js/lib/jquery.quicksand.js"></script>
 </head>
 <body>
 <header>
