--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 <footer>
 
 </footer>
+<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
 <script src="{{site.baseurl}}/js/animation.js"></script>
 </body>
 </html>
