--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -157,3 +157,28 @@ nav {
 .categories a.current {
   border-bottom: 1px solid orange;
 }
+.skills {
+  list-style: none;
+  li {
+    border-radius: 5px;
+    padding: 25px;
+    //border-bottom: 1px solid #ccc;
+    background-color: #2098d1;
+    color: #fff;
+    margin-bottom: 30px;
+    h4 {
+      font-size: 26px;
+      color: #fff;
+    }
+    p {
+      font-style: italic;
+      font-size: 15px;
+      color: #fff;
+    }
+  }
+  /* Ensure elements load hidden before ScrollReveal runs */
+  .sr .fooReveal { visibility: hidden; }
+
+  /* add perspective to your container */
+  .fooContainer { perspective: 800px; }
+}
